<resources>
    <string name="app_name">Sewain</string>

    <string name="hello_blank_fragment">Hello Kost fragment</string>
    <string name="nama_kost">nama kost</string>
    <string name="alamat">Alamat : jln mutira no 8</string>
    <string name="keterangan">kos murah meriah</string>
    <string name="stock_kost">tersedia 2 jenis kamar</string>
    <string name="pemilik">pemilik : muh alfalah</string>
    <string name="jenis_kamar">kamar tipe : A1</string>
    <string name="room_price">Rp. 4.000.000 / Tahun</string>
    <string name="facilities">kamar madi dalam, tv, ac, tempat cuci piring, kulkas</string>
    <string name="detail">Detail</string>
    <string name="_735">Rp.15.000.000</string>
    <string name="stock_hanya_5_buah">tinggal 3 kamar</string>
    <string name="content_text">Tempat kost ini merupakan kawasan yang strategis karena dekat dengan kampus dan         pusat perbelanjaan</string>
    <string name="spesifikasi">Keterangan</string>
    <string name="f_umum">Fasilitas</string>
    <string name="f_umum_desc">
        2 tempat tidur lengkap dgn bantal\n
        1 kamar mansi dalam\n
        1 lemari\n
        Termasuk Listrik\n
        Termasuk Air\n
    </string>
    <string name="phone">Masa kecil Laura dihabiskan di panti , dengan Arya sebagai sahabat satu-satunya.Ketika diadopsi dan harus meninggalkan Indonesia, Arya berjanji akan kembali ke panti untuk menjemput dan menikahi Laura saat dewasa kelak.Seiring waktu berlalu, banyak keluarga yang juga ingin mengadopsi Laura,tapi ditolaknya. Gadis itu bertahan tinggal di panti sembari bekerja untuk membiayai kuliahnya. Dan… tetap menunggu Arya kembali. Namun, kehadiran Daniel,putra pemilik perusahaan tempat Laura bekerja, membuat gadis itu kelimpungan. Sikap Daniel yang arogan berhasil mengguncang dunia Laura yang tenang, mengisi seluruh sudut pikirannya. Pria itu mampu mengalihkan ingatan Laura terhadap janji Arya. Hingga pada satu titik, Laura bertanya-tanya.Haruskan ia tetap menunggu janji Arya atau jatuh cinta pada pria lain untuk pertama kalinya?</string>
    <string name="size">Ukuran</string>
    <string name="content_specs_size">4 X 4 m</string>
    <string name="lama_tinggal">Lama Tinggal</string>
    <string name="lama_tinggal_desc">1 Tahun</string>
    <string name="di_jual_oleh">Pemilik</string>
    <string name="hubungi">Hubungi</string>
    <string name="lihat_kost">Lihat Kost</string>
    <string name="favorites">Favorites</string>
    <string name="simpan">Simpan</string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="example_search_kost">cari berdasarkan nama atau alamat</string>
    <string name="load_more">lebih banyak</string>
    <string name="tidak_ada_data2">tidak ada data, swipe down untuk refresh</string>
    <string name="tentang">
        Cokost merupakan aplikasi yang membantu anda untuk mencari kost \n
        Dikembangkan oleh : Madukubah
    </string>
    <string name="menu">Menu</string>
    <string name="keranjang">Keranjang</string>
    <string name="profil">Profil</string>
    <string name="cari">Cari</string>
    <string name="sapi">Sapi Super</string>
    <string name="ini_deskripsi">Ini deskripsi</string>
    <string name="harga">Rp. 15.000.000</string>
    <string name="_15_kali_dilihat">15 kali dilihat</string>
    <string name="berat">Berat</string>
    <string name="umur">Umur</string>
    <string name="_10_tahun">10 Tahun</string>
    <string name="alan_peternakan_yuhu">Alan ( Peternakan Yuhu )</string>
    <string name="jln_mutiara">Jln mutiara</string>
</resources>
