<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/pixel_google"
            tools:src="@color/colorAccent"/>
        <TextView
            android:id="@+id/item_name"
            android:layout_below="@+id/img_item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/sapi" />
        <TextView
            android:id="@+id/item_desc"
            android:layout_below="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:singleLine="true"
            android:textSize="14dp"
            android:text="@string/ini_deskripsi"
            style="@style/TextContent.Subtitle"
            />
        <TextView
            android:id="@+id/item_price"
            android:layout_below="@+id/item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextContent.Subtitle"
            android:textSize="14dp"
            android:layout_marginBottom="8dp"
            android:text="@string/harga" />
    </RelativeLayout>
</android.support.v7.widget.CardView>