<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.detail.DetailItemActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_hubungi"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager_slider"
                    android:layout_width="match_parent"
                    android:layout_height="250dp">
                </android.support.v4.view.ViewPager>

            </FrameLayout>
            <TextView
                android:id="@+id/tv_book_title"
                style="@style/TextContent.Black"
                android:textSize="24sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                tools:text="Promise - Ketika Janji Menjadi Begitu Berarti" />
            <TextView
                android:id="@+id/tv_book_author"
                style="@style/TextContent.Subtitle"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="LalunaKia" />
            <TextView
                android:id="@+id/tv_book_page_count"
                style="@style/TextContent.Subtitle"
                android:textSize="12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="272 Halaman " />
            <TextView
                android:id="@+id/tv_book_desc"
                style="@style/TextContent.Subtitle"
                android:textSize="12sp"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@string/phone" />



            <TextView

                style="@style/TextContent.Subtitle"
                android:text="@string/di_jual_oleh"
                android:layout_marginBottom="8dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:src="@drawable/photo_2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_owner"
                        style="@style/TextContent"
                        android:layout_marginBottom="8dp"
                        android:text="@string/alan_peternakan_yuhu" />

                    <TextView
                        android:id="@+id/tv_store_address"
                        style="@style/TextContent"
                        android:text="@string/jln_mutiara" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btn_hubungi"
        android:text="@string/hubungi"
        android:layout_alignParentBottom="true"
        style="@style/ButtonGeneral" />

</RelativeLayout>